--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,36 @@
 
 /* Your CSS Code here. */
+table{
+	border-collapse:collapse;
+	width:60%;
+	margin:30px auto;
+	text-align:center;
+	
+}
+td,th{
+	border:1px solid black;
+	padding:2px;
+	
+}
+th{
+	background-color:#a62d3d;
+	color:white;
+}
+
+tr:nth-child(odd) td{
+	background-color:#f3c7c7
+}
+tr:nth-child(even) td{
+	background-color:#d9d9d9
+}
+
+td:first-child{
+	text-align:left;
+	font-weight:bold;
+	color:#0f3c7a;
+}
+
+tr:first-child th:first-child{
+	text-align:left;
+}
+
